Link facebook group.

--- a/community.html
+++ b/community.html
@@ -167,6 +167,7 @@
       <ul>
         <li><a href="https://www.thingiverse.com/groups/openscad">OpenSCAD Thingiverse group</a></li>
         <li><a href="https://www.reddit.com/r/openscad/">OpenSCAD subreddit</a></li>
+        <li><a href="https://www.facebook.com/groups/OpenSCADAcademy">Facebook: OpenSCADAcademy</a></li>
       </ul>
 		</section>
 
