Update info boxes.

--- a/community.html
+++ b/community.html
@@ -87,6 +87,10 @@
     <section-area style="width: 100%;">
       <div class="link-grid">
         <div class="link-button">
+          <h1><a href="https://web.libera.chat/?channel=#openscad">Chat</a></h1>
+          <small>Chat with users and developers, show things you made, ask questions</small>
+        </div>
+        <div class="link-button">
           <h1><a href="https://lists.openscad.org/empathy/list/discuss.lists.openscad.org">Mailing list</a></h1>
           <small>Join the community on the Mailing list</small>
         </div>
@@ -94,11 +98,7 @@
           <h1><a href="https://github.com/openscad/openscad/issues">Bug reports</a></h1>
           <small>Report bugs and request features on github</small>
         </div>
-        <div class="link-button">
-          <h1><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">Documentation</a></h1>
-          <small>Read and edit documentation on Wikibooks</small>
         </div>
-      </div>
     </section-area>
 
     <section id="get-involved">
@@ -146,7 +146,7 @@
 		</section>
 
 		<section id="irc">
-			<h1>IRC Channel</h1>
+			<h1>Chat / IRC Channel</h1>
       <ul>
         <li>Join via the libera.chat <a href="https://web.libera.chat/?channel=#openscad">web chat</a> (KiwiIRC)</li>
         <li>Connect with an IRC client to <a href="irc:openscad@irc.libera.chat" target="_blank">#openscad</a> on <a href="ircs://irc.libera.chat:6697">irc.libera.chat</a> +6697 (TLS)</li>
