--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -327,6 +327,14 @@ All scripts are licensed <a class="link" href="https://creativecommons.org/publi
 <span class="sep">||</span>
 <a class="link" href="https://github.com/openscad/openscad-advent-calendar-2020/">Design repo on github</a>
 <span class="sep">||</span>
+<br>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2019/">2019</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2020/">2020</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2021/">2021</a>
+<span class="sep">-</span>
 </div>
 </body>
 </html>
