--- a/advent-calendar-2021/index.html
+++ b/advent-calendar-2021/index.html
@@ -520,8 +520,16 @@ a.link:hover {
 <span class="sep">||</span>
 All scripts are licensed <a class="link" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
 <span class="sep">||</span>
-Doors open midnight UTC
+<a class="link" href="https://github.com/openscad/openscad-advent-calendar-2021/">Design repo on github</a>
 <span class="sep">||</span>
+<br>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2019/">2019</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2020/">2020</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2021/">2021</a>
+<span class="sep">-</span>
 </div>
 <div id="modal" class="modal">
   <div class="modal-content">
