Remove Advent Calendar link.

--- a/index.html
+++ b/index.html
@@ -113,19 +113,12 @@
 	</div>
 	
   <article>
-    <!--
     <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
       <p>
-        OpenSCAD IRC channel moved to <a href="https://libera.chat/">libera.chat</a>. Chat with us in channel
-        <a href="https://web.libera.chat/?channel=#openscad">#openscad</a>.
+	OpenSCAD Chat: <a href="https://web.libera.chat/?channel=#openscad">#openscad</a>
+	(on IRC network <a href="https://libera.chat/">libera.chat</a>).
       </p>
     </section-area>
-    -->
-    <section id="snow" class="header">
-      <span style="color: #9dcb51;">Open</span><span style="color: rgba(249, 215, 44, 1);">SCAD</span>
-      <br>
-      <a href="advent-calendar-2021/">Advent Calendar 2021</a>
-    </section>
 
     <section>
 			<h1><strong><span class="green">Open</span>SCAD</strong> is software for creating solid 3D CAD objects.</h1>
