change to https for forum.openscad.org

--- a/community.html
+++ b/community.html
@@ -132,7 +132,7 @@
 		<section id="forum">
 			<h1>Forum / Mailing List</h1>
       <ul>
-        <li><s><a href="http://forum.openscad.org" target="_blank">Forum</a> (provided by Nabble)</s></li>
+        <li><s><a href="https://forum.openscad.org" target="_blank">Forum</a> (provided by Nabble)</s></li>
         <li><a href="https://lists.openscad.org/list/discuss.lists.openscad.org" target="_blank">Mailing list info</a></li>
         <li><a href="https://lists.openscad.org/empathy/list/discuss.lists.openscad.org" target="_blank">Mailing list archive</a></li>
       </ul>
