--- a/gsod-2019.html
+++ b/gsod-2019.html
@@ -173,7 +173,7 @@
 
 <p>We have a <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Tips_and_Tricks">Tips & Tricks guide</a> which is meant to help users with various skill level by providing code snippets for topics that come up multiple times. This includes simple coding techniques for calculating values like selectively counting values in a list or geometric topics like stacking different sized objects.</p>
 
-<p>The main idea for this project is to provide a framework for presenting the tips in a more interactive way using standard web techniques. This would either pick a number of existing tips or create some new ones based on research on sites like the <a href="http://forum.openscad.org/">OpenSCAD forum</a>, <a href="https://stackoverflow.com/tags/openscad">StackOverflow</a> and <a href="https://www.thingiverse.com/groups/openscad/forums/general">Thingiverse Discussion Group</a>. Interactive in that context means to break down the more complex tips into smaller steps and present them to the user in a way that it's possible to interactively move though the steps and maybe also modify some of the parameters on the way.</p>
+<p>The main idea for this project is to provide a framework for presenting the tips in a more interactive way using standard web techniques. This would either pick a number of existing tips or create some new ones based on research on sites like the <a href="https://forum.openscad.org/">OpenSCAD forum</a>, <a href="https://stackoverflow.com/tags/openscad">StackOverflow</a> and <a href="https://www.thingiverse.com/groups/openscad/forums/general">Thingiverse Discussion Group</a>. Interactive in that context means to break down the more complex tips into smaller steps and present them to the user in a way that it's possible to interactively move though the steps and maybe also modify some of the parameters on the way.</p>
 
 <table>
     <tr>
@@ -201,7 +201,7 @@
     <li><b>Contact address:</b> <a href="mailto:gsod2019@openscad.org">gsod2019@openscad.org</a></li>
     <li><b>Github organization:</b> <a href="https://github.com/openscad/">https://github.com/openscad/</a> (<a href="https://github.com/openscad/openscad/">source repo</a>, <a href="https://github.com/openscad/openscad.github.com
 /">web site repo</a></li>
-    <li><b>Forum/Mailing list:</b> <a href="http://forum.openscad.org/">http://forum.openscad.org/</a></li>
+    <li><b>Forum/Mailing list:</b> <a href="https://forum.openscad.org/">https://forum.openscad.org/</a></li>
 </ul>
 <b>People:</b>
 <ul>
