--- a/gsod-2020.html
+++ b/gsod-2020.html
@@ -195,7 +195,7 @@ covered in scope of the Google Season of Docs rules.
     The main idea for this project is to provide a framework for presenting
     the tips in a more interactive way using standard web techniques. This
     would either pick a number of existing tips or create some new ones based
-    on research on sites like the <a href="http://forum.openscad.org/">OpenSCAD forum</a>,
+    on research on sites like the <a href="https://forum.openscad.org/">OpenSCAD forum</a>,
     <a href="https://stackoverflow.com/tags/openscad">StackOverflow</a>,
     the <a href="https://www.reddit.com/r/openscad/">OpenSCAD subreddit</a>
     and <a href="https://www.thingiverse.com/groups/openscad/forums/general">Thingiverse Discussion Group</a>.
@@ -405,7 +405,7 @@ covered in scope of the Google Season of Docs rules.
     <li><b>Contact address:</b> <a href="mailto:gsod2020@openscad.org">gsod2020@openscad.org</a></li>
     <li><b>Github organization:</b> <a href="https://github.com/openscad/">https://github.com/openscad/</a> (<a href="https://github.com/openscad/openscad/">source repo</a>, <a href="https://github.com/openscad/openscad.github.com
 /">web site repo</a>)</li>
-    <li><b>Forum/Mailing list:</b> <a href="http://forum.openscad.org/">http://forum.openscad.org/</a></li>
+    <li><b>Forum/Mailing list:</b> <a href="https://forum.openscad.org/">https://forum.openscad.org/</a></li>
 </ul>
 
 <b>People:</b>
