change to https for files.openscad.org

--- a/downloads.html
+++ b/downloads.html
@@ -647,7 +647,7 @@
         <li>The OpenSCAD Developers &lt;dev@openscad.org&gt;</li>
         <li>Key ID: <a href="http://keys.gnupg.net/pks/lookup?search=0x8af822a975097442&fingerprint=on&op=index">0x8AF822A975097442</a></li>
         <li>Fingerprint: <code>B3C9 4B42 50DC 097E 9FFF 8177 8AF8 22A9 7509 7442</code></li>
-        <li>Download: <a href="http://files.openscad.org/openscad-signing-key_0x8AF822A975097442.asc">openscad-signing-key_0x8AF822A975097442.asc</a></li>
+        <li>Download: <a href="https://files.openscad.org/openscad-signing-key_0x8AF822A975097442.asc">openscad-signing-key_0x8AF822A975097442.asc</a></li>
       </ul>
     </section>
 
