change to https for openscad.org

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>OpenSCAD - The Programmers Solid 3D CAD Modeller</title>
         <meta property="og:title" content="OpenSCAD" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://openscad.org" />
-        <meta property="og:image" content="http://openscad.org/assets/img/logo.png" />
+        <meta property="og:url" content="https://openscad.org" />
+        <meta property="og:image" content="https://openscad.org/assets/img/logo.png" />
         <meta name="p:domain_verify" content="e7ccfb283cc55dd8e8ce7a4641376553"/>
 	<link href="assets/css/style.css" rel="stylesheet"/>
 
