change www.openscad.org to openscad.org
www.openscad.org redirects to non www page

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -274,7 +274,7 @@ a.footer:hover {
 </section>
 <div class="footer">
 <span class="sep">||</span>
-<a class="footer" href="https://www.openscad.org/downloads.html">Download OpenSCAD</a>
+<a class="footer" href="https://openscad.org/downloads.html">Download OpenSCAD</a>
 <span class="sep">||</span>
 <a class="footer" href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a>
 <span class="sep">||</span>
