--- a/advent-calendar-2021/index.html
+++ b/advent-calendar-2021/index.html
@@ -14,12 +14,12 @@
     <meta name="twitter:site" content="@openscad">
     <meta name="twitter:title" content="OpenSCAD Advent Calendar 2021">
     <meta name="twitter:description" content="#SCADvent">
-    <meta name="twitter:image" content="https://www.openscad.org/advent-calendar-2021/card.png">
+    <meta name="twitter:image" content="https://openscad.org/advent-calendar-2021/card.png">
     <meta property="og:updated_time" content="1638230813"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="OpenSCAD Advent Calendar 2021"/>
     <meta property="og:description" content="#SCADvent"/>
-    <meta property="og:image" content="https://www.openscad.org/advent-calendar-2021/card.png">
+    <meta property="og:image" content="https://openscad.org/advent-calendar-2021/card.png">
     <meta property="og:image:width" content="1400"/>
     <meta property="og:image:height" content="700"/>
     <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
@@ -485,7 +485,7 @@ a.link:hover {
       <span class="green">Open</span><span class="yellow">SCAD</span>
       <br><span class="gray small">Advent Calendar 2021</span>
       <br><span class="gray small">#SCADvent</span>
-      <img src="https://www.openscad.org/images/openscad.png">
+      <img src="https://openscad.org/images/openscad.png">
     </p>
   </div>
   <div class="day-1"><label><input type="checkbox"><div class="door"><div class="front">1</div><div class="back"></div></div><div id="day-1" class="content hide"><div class="link"><button id="btn1"><i data-feather="zoom-in" width="32" height="32"></i></button></div></div></input></label></div>
@@ -515,7 +515,7 @@ a.link:hover {
 </section>
 <div class="footer">
 <span class="sep">||</span>
-<a class="link" href="https://www.openscad.org/downloads.html">Download OpenSCAD</a>
+<a class="link" href="https://openscad.org/downloads.html">Download OpenSCAD</a>
 <span class="sep">||</span>
 <a class="link" href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a>
 <span class="sep">||</span>
