--- a/gsod-2019.html
+++ b/gsod-2019.html
@@ -27,7 +27,7 @@
 <h2>About OpenSCAD</h2>
 
 <img src="images/openscad.png" width="100" align="left">
-<p><a href="https://www.openscad.org/">OpenSCAD</a> is software for creating solid 3D CAD models. It is free software and available for Linux/UNIX, Windows and Mac OS X.</p>
+<p><a href="https://openscad.org/">OpenSCAD</a> is software for creating solid 3D CAD models. It is free software and available for Linux/UNIX, Windows and Mac OS X.</p>
 
 <p>OpenSCAD is not an interactive modeller. It reads a script containing a textual description of a 3D design and generates the model from that. This gives the designer full control over the modelling process and makes it possible to easily change any step in the modelling process or make designs that are defined by configurable parameters.</p>
 
@@ -161,7 +161,7 @@
     </tr>
     <tr>
         <th>Current state</th>
-        <td>Relatively complete and reasonably structured documentation exists, but it's lacking a single style, clear references and a good list of examples with reference pictures.<br><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">https://en.wikibooks.org/wiki/OpenSCAD_User_Manual</a><br>Cheat Sheet: <a href="https://www.openscad.org/cheatsheet/">https://www.openscad.org/cheatsheet/</a> - (<a href="https://www.openscad.org/cheatsheet/snapshot.html">development version</a>)</td>
+        <td>Relatively complete and reasonably structured documentation exists, but it's lacking a single style, clear references and a good list of examples with reference pictures.<br><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">https://en.wikibooks.org/wiki/OpenSCAD_User_Manual</a><br>Cheat Sheet: <a href="https://openscad.org/cheatsheet/">https://openscad.org/cheatsheet/</a> - (<a href="https://openscad.org/cheatsheet/snapshot.html">development version</a>)</td>
     </tr>
     <tr>
         <th>Expected license</th>
