--- a/news.html
+++ b/news.html
@@ -124,7 +124,7 @@
         <p>
           Project suggestions have been posted to our <a href="https://opencax.github.io/">OpenCAx</a> site
           which lists all the projects proposed under the BRL-CAD umbrella. If you're interested in participating,
-          please get in touch on the <a href="https://www.openscad.org/community.html#forum">mailing list</a> or
+          please get in touch on the <a href="https://openscad.org/community.html#forum">mailing list</a> or
           join the #openscad channel on IRC to discuss details
           and to help you get your feet wet. We're also open to new ideas than just the ones listed on the proposal
           page.
