--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -164,7 +164,7 @@ label:hover .door {
 .title {
   grid-area: t;
   display: flex;
-  background: no-repeat left/90% url(https://www.openscad.org/images/openscad.png);
+  background: no-repeat left/90% url(https://openscad.org/images/openscad.png);
 }
 
 .header {
@@ -289,7 +289,7 @@ a.link:hover {
   <div class="header">
     <p>
       <span class="green">Open</span><span class="yellow">SCAD</span><br><span class="gray small"><small>Advent Calendar 2020</small></span>
-      <img src="https://www.openscad.org/images/openscad.png">
+      <img src="https://openscad.org/images/openscad.png">
     </p>
   </div>
   <div class="day-1"><label><input type="checkbox"><div class="door"><div class="front">1</div><div class="back"></div></div><div class="content hide"><div class="link"><a href="https://files.openscad.org/advent-calendar-2020/01.scad">01.scad</a></div></div></input></label></div>
@@ -319,7 +319,7 @@ a.link:hover {
 </section>
 <div class="footer">
 <span class="sep">||</span>
-<a class="link" href="https://www.openscad.org/downloads.html">Download OpenSCAD</a>
+<a class="link" href="https://openscad.org/downloads.html">Download OpenSCAD</a>
 <span class="sep">||</span>
 <a class="link" href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a>
 <span class="sep">||</span>
