--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -258,7 +258,7 @@
     <section>
       <article class="info">
           <em>Links:</em>
-          <a href="http://www.openscad.org/" target="_blank">Official website</a>
+          <a href="https://openscad.org/" target="_blank">Official website</a>
           | <a href="https://github.com/openscad/openscad" target="_blank">Code</a>
           | <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a>
           | <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a>
