--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -27,7 +27,7 @@
 <body>
   <header>
     <h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
-    <h2>(<a href="http://www.openscad.org/downloads.html#snapshots">dev snapshot</a>)</h2>
+    <h2>(<a href="https://openscad.org/downloads.html#snapshots">dev snapshot</a>)</h2>
   </header>
   <section>
     <section>
@@ -258,7 +258,7 @@
     <section>
       <article class="info">
           <em>Links:</em>
-          <a href="http://www.openscad.org/" target="_blank">Official website</a>
+          <a href="https://openscad.org/" target="_blank">Official website</a>
           | <a href="https://github.com/openscad/openscad" target="_blank">Code</a>
           | <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a>
           | <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a>
