--- a/gsod-2020.html
+++ b/gsod-2020.html
@@ -29,7 +29,7 @@
 <img src="images/openscad.png" width="100" align="left">
 
 <p>
-    <a href="https://www.openscad.org/">OpenSCAD</a> is software for creating
+    <a href="https://openscad.org/">OpenSCAD</a> is software for creating
     solid 3D CAD models. It is free software and available for Linux/UNIX,
     Windows and Mac OS X.
 </p>
@@ -304,7 +304,7 @@ covered in scope of the Google Season of Docs rules.
     </tr>
     <tr>
         <th>Current state</th>
-        <td>Relatively complete and reasonably structured documentation exists, but it's lacking a single style, clear references and a good list of examples with reference pictures.<br><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">https://en.wikibooks.org/wiki/OpenSCAD_User_Manual</a><br>Cheat Sheet: <a href="https://www.openscad.org/cheatsheet/">https://www.openscad.org/cheatsheet/</a> - (<a href="https://www.openscad.org/cheatsheet/snapshot.html">development version</a>)</td>
+        <td>Relatively complete and reasonably structured documentation exists, but it's lacking a single style, clear references and a good list of examples with reference pictures.<br><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">https://en.wikibooks.org/wiki/OpenSCAD_User_Manual</a><br>Cheat Sheet: <a href="https://openscad.org/cheatsheet/">https://openscad.org/cheatsheet/</a> - (<a href="https://openscad.org/cheatsheet/snapshot.html">development version</a>)</td>
     </tr>
     <tr>
         <th>Expected license</th>
