--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
 	<link href="assets/css/style.css" rel="stylesheet">
   
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
