--- a/gsod-2020.html
+++ b/gsod-2020.html
@@ -7,7 +7,7 @@
 
 	<link href="assets/css/style-gsod.css" rel="stylesheet"/>
 
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
+	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 
     <style>
         img { padding: 0 1em 0 1em; }
