--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="assets/css/style.css" rel="stylesheet"/>
 
 	<link href="assets/fontawesome/css/all.min.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
+	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 
 	<script src="advent-calendar-2021/snow.js"></script>
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
