--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
 
 	<link href="assets/css/style.css" rel="stylesheet"/>
   
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
+	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
