--- a/downloads.html
+++ b/downloads.html
@@ -142,7 +142,7 @@
         </div>
 			</div>
 			<div class="subsection">
-				<p>OpenSCAD is also available on <a href="http://www.macports.org/" target="_blank">MacPorts</a> (<a href="https://ports.macports.org/port/openscad/summary">check version</a>):</p>
+				<p>OpenSCAD is also available on <a href="https://www.macports.org/" target="_blank">MacPorts</a> (<a href="https://ports.macports.org/port/openscad/summary">check version</a>):</p>
 				<pre>
 					<code>$ sudo port install openscad</code>
 				</pre>
@@ -224,7 +224,7 @@
 			</div>
 			<div id="opensuse" class="subsection">
 				<h2>openSUSE</h2>
-				<p>OpenSCAD is available from <a href="http://software.opensuse.org/download.html?project=graphics&package=openscad" target="_blank">software.opensuse.org</a></p>
+				<p>OpenSCAD is available from <a href="https://software.opensuse.org/download.html?project=graphics&package=openscad" target="_blank">software.opensuse.org</a></p>
 			</div>
 			<div id="arch" class="subsection">
 				<h2>Arch Linux</h2>
@@ -270,7 +270,7 @@
 			<h1>BSD</h1>
 			<div id="netbsd" class="subsection">
 				<h2>NetBSD (>=6.1)</h2>
-				<p><a href="http://pkgin.net/">Set up pkgin</a> and run this command:</p>
+				<p><a href="https://pkgin.net/">Set up pkgin</a> and run this command:</p>
 				<pre>
 					<code># pkgin install openscad</code>
 				</pre>
