Add info about Docker images.

--- a/downloads.html
+++ b/downloads.html
@@ -121,6 +121,7 @@
 			<li><a href="#other-systems">Other Systems</a></li>
 			<li><a href="#source-code">Source Code</a></li>
 			<!--<li><a href="#rc">Release Candidates</a></li>-->
+			<li><a href="#docker">Docker</a></li>
 			<li><a href="#snapshots">Development Snapshots</a></li>
 			<li><a href="#priorreleases">Prior Releases</a></li>
 			<li><a href="#gnupg">GnuPG Signature</a></li>
@@ -408,6 +409,34 @@
       </div>
     </section>
     -->
+
+		<section id="docker">
+			<h1>Docker</h1>
+
+			<img alt="Docker Logo" style="margin-bottom: 2em" src="assets/img/docker-horizontal-logo-monochromatic-white.png" width="200">
+
+			<p>
+				Docker images are provided at <a href="https://hub.docker.com/">Docker Hub</a> in the
+				<a href="https://hub.docker.com/r/openscad/openscad/tags">openscad/openscad</a> repository.
+			</p>
+
+			<p>
+				<ul>
+					<li>Release 2021.01, based on Debian Buster</li>
+					<li>Release 2019.05, based on Debian Buster</li>
+					<li>Release 2015.03, based on Debian Stretch</li>
+					<li>Development snapshot, based on Debian Bookworm</li>
+				</ul>
+			</p>
+
+			<p>
+				Images are currently available for platforms <code>linux/amd64</code> and <code>linux/arm64</code>.
+			</p>
+
+			<p>
+				For more details see the <a href="https://hub.docker.com/r/openscad/openscad">overview page</a> on Docker Hub.
+			</p>
+		</section>
 
 		<section id="snapshots">
 			<h1>Development Snapshots</h1>
