fix missing end tags

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -121,7 +121,7 @@
         <ul>
           <li>Author: Justin Gohde &amp; Marius Kintel</li>
           <li>Publisher: No Starch Press
-            &nbsp <a href="https://nostarch.com/programmingopenscad"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://nostarch.com/programmingopenscad"><span class="fas fa-external-link-alt"></span></a>
           </li>
           <li>Date: July 2021</li>
         </ul>
@@ -155,7 +155,7 @@
             &nbsp <a href="mailto:openscad-meistern@kerdels.de?subject=Mastering OpenSCAD"><span class="far fa-envelope"></span></a>
           </li>
           <li>Publisher: Jochen Kerdels
-            &nbsp <a href="https://mastering-openscad.eu/impressum/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://mastering-openscad.eu/impressum/"><span class="fas fa-external-link-alt"></span></a>
           </li>
           <li>Date: March 2021</li>
         </ul>
@@ -185,7 +185,7 @@
         <ul>
           <li>Author: Alicia Noors</li>
           <li>Publisher: Books on Demand
-            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"></span></a>
           </li>
           <li>Date: November 2020</li>
           <li>ISBN: 978-3-75-268560-2</li>
@@ -205,7 +205,7 @@
             &nbsp <a href="https://www.youtube.com/user/MrTamhan"><span class="fab fa-youtube"></span></a>
           </li>
           <li>Publisher: Elektor
-            &nbsp <a href="https://www.elektor.com/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://www.elektor.com/"><span class="fas fa-external-link-alt"></span></a>
           </li>
           <li>Date: October 2020</li>
           <li>ISBN: 978-1-90-792099-8</li>
@@ -243,7 +243,7 @@
         <ul>
           <li>Author: David Leithauser</li>
           <li>Publisher: Leithauser Research
-            &nbsp <a href="https://leithauserresearch.com/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://leithauserresearch.com/"><span class="fas fa-external-link-alt"></span></a>
           <li>Date: October 2020</li>
           <li>ISBN: 979-8-55-333291-4</li>
         </ul>
@@ -290,7 +290,7 @@
             &nbsp <a href="https://openscadbook.com/"><span class="fas fa-globe"></span></a>
           </li>
           <li>Publisher: Books To Believe In
-            &nbsp <a href="https://bookstobelievein.com/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://bookstobelievein.com/"><span class="fas fa-external-link-alt"></span></a>
           </li>
           <li>Date: November 2018</li>
           <li>ISBN: 978-1-79-027391-1</li>
@@ -311,7 +311,7 @@
             &nbsp <a href="https://github.com/wd5gnr"><span class="fab fa-github"></span></a>
           </li>
           <li>Publisher: Createspace
-            &nbsp <a href="https://www.createspace.com/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://www.createspace.com/"><span class="fas fa-external-link-alt"></span></a>
           <li>Date: July 2014</li>
           <li>ISBN: 978-1-50-058247-0</li>
         </ul>
@@ -350,10 +350,10 @@
             &nbsp <a href="mailto:openscad-meistern@kerdels.de?subject=OpenSCAD meistern"><span class="far fa-envelope"></span></a>
           </li>
           <li>Herausgeber: Jochen Kerdels (Online)
-            &nbsp <a href="https://openscad-meistern.de/impressum/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://openscad-meistern.de/impressum/"><span class="fas fa-external-link-alt"></span></a>
           </li>
           <li>Herausgeber: Books on Demand (Paperback)
-            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"></span></a>
           <li>Datum: Februar 2021</li>
           <li>ISBN: 978-3-75-344195-5</li>
         </ul>
@@ -375,7 +375,7 @@
             &nbsp <a href="https://www.youtube.com/user/MrTamhan"><span class="fab fa-youtube"></span></a>
           </li>
           <li>Herausgeber: Elektor
-            &nbsp <a href="https://www.elektor.de/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://www.elektor.de/"><span class="fas fa-external-link-alt"></span></a>
           </li>
           <li>Datum: Oktober 2020</li>
           <li>ISBN: 978-3-89-576396-0</li>
@@ -412,7 +412,7 @@
         <ul>
           <li>Autor: Alicia Noors</li>
           <li>Herausgeber: Books on Demand
-            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></a>
+            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"></span></a>
           <li>Datum: Januar 2019</li>
           <li>ISBN: 978-3-74-817261-1</li>
         </ul>
