--- a/downloads.html
+++ b/downloads.html
@@ -265,6 +265,7 @@
 					<img width="200" alt="Download on Flathub" src="https://flathub.org/assets/badges/flathub-badge-i-en.svg"/>
 				</a>
 			</div>
+			</div>
 		</section>
 
 		<section id="bsd">
