--- a/gsod-2019.html
+++ b/gsod-2019.html
@@ -213,7 +213,7 @@
 
 <small>Portions of this page are reproduced from work created and <a href="https://developers.google.com/readme/policies/">shared by Google</a> and used according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons 3.0 Attribution License</a> | Logo - source: <a href="https://developers.google.com/season-of-docs/docs/press">https://developers.google.com/season-of-docs/docs/press</a> | Citation in Paragraph "About Google Season of Docs" - source: <a href="https://developers.google.com/season-of-docs/docs/">https://developers.google.com/season-of-docs/docs/</a></small>
 
-</div>
-
+</div><!--#page-content end-->
+</div><!--#page-wrap end-->
 </body>
 </html>
