--- a/gsod-2020.html
+++ b/gsod-2020.html
@@ -424,7 +424,7 @@ covered in scope of the Google Season of Docs rules.
     | Citation in Paragraph "About Google Season of Docs" - source: <a href="https://developers.google.com/season-of-docs/docs/">https://developers.google.com/season-of-docs/docs/</a>
 </small>
 
-</div>
-
+</div><!--#page-content end-->
+</div><!--#page-wrap end-->
 </body>
 </html>
