--- a/advent-calendar-2021/index.html
+++ b/advent-calendar-2021/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image:width" content="1400"/>
     <meta property="og:image:height" content="700"/>
     <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
-    <link href="assets/fonts/open-sans/all.css" rel="stylesheet">
+    <link href="../assets/fonts/open-sans/all.css" rel="stylesheet">
     <link rel="stylesheet" href="snow.css">
     <title>OpenSCAD Advent Calendar 2021</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
