fix favicon path

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;"/>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link type="text/css" rel="stylesheet" href="css/normalize.css" media="all" />
   <link type="text/css" rel="stylesheet" href="css/fonts.css" media="all" />
   <link type="text/css" rel="stylesheet" href="css/main.css" media="all" />
