Add tray library.

--- a/libraries.html
+++ b/libraries.html
@@ -88,6 +88,7 @@
         <li>&centerdot;&nbsp;<a href="#SmoothPrimitives">Smooth Primitives Library</a></li>
         <li>&centerdot;&nbsp;<a href="#FunctionPlotting">Function Plotting Library</a></li>
         <li>&centerdot;&nbsp;<a href="#ClosePoints">ClosePoints Library</a></li>
+        <li>&centerdot;&nbsp;<a href="#Tray">Tray Library</a></li>
       </ul>
     </ul>
   </div>
@@ -234,6 +235,18 @@
         <li><a href="https://github.com/rcolyer/closepoints">Library</a></li>
         <li><a href="https://github.com/rcolyer/closepoints/blob/master/README.md">Documentation</a></li>
         <li>License: CC0-1.0</li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/sofian_tray.gif" width="200" align="right">
+      <h2 id="Tray">Tray Library</h2>
+      <p>Allows the design of trays with optional subdivisions. Many different configuration
+        options available. Designed to quickly create trays with different configurations, for
+        efficient storing of parts, such as hardware, small tools, board game inserts, etc..</p>
+      <ul>
+        <li><a href="https://github.com/sofian/openscad-tray">Library</a></li>
+        <li><a href="https://github.com/sofian/openscad-tray/blob/main/README.md">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/LGPL-3.0-or-later.html">LGPL-3.0-or-later</a></li>
       </ul>
       <p style="clear: both"></p>
     </section>
